[gd_scene load_steps=16 format=3 uid="uid://0nbfgsjfecy8"]

[ext_resource type="Script" uid="uid://3qg5qwd7ie6j" path="res://scripts/levels/minigame_overlay.gd" id="1_jh425"]
[ext_resource type="Texture2D" uid="uid://dykbrwe0ocsvh" path="res://assets/ui/receta_texture.png" id="2_e7l36"]
[ext_resource type="Texture2D" uid="uid://yxsy07s7t2f1" path="res://assets/ui/receta-btn.png" id="3_t45b2"]
[ext_resource type="Texture2D" uid="uid://xwv0x6o3g3x2" path="res://assets/ui/receta-btn-pressed.png" id="4_3ueo8"]
[ext_resource type="Texture2D" uid="uid://ckppfydbn3ir1" path="res://assets/pastry/recipes/recipe_001.png" id="5_e7l36"]
[ext_resource type="Texture2D" uid="uid://brnhfvfk4isam" path="res://assets/pastry/recipes/recipe_002.png" id="6_ww4g8"]
[ext_resource type="Texture2D" uid="uid://c85lql542hrd6" path="res://assets/pastry/recipes/recipe_003.png" id="7_70k8r"]
[ext_resource type="Texture2D" uid="uid://ciqmpolj4not4" path="res://assets/pastry/recipes/recipe_004.png" id="8_q84un"]
[ext_resource type="Theme" uid="uid://xreggbw3h3yp" path="res://custom_resources/CustomerMessage.tres" id="9_smtws"]
[ext_resource type="Texture2D" uid="uid://b28kcd0oku717" path="res://assets/ui/interact-btn.png" id="10_e7l36"]
[ext_resource type="Texture2D" uid="uid://pe12a3dpmteo" path="res://assets/ui/interact-btn-pressed.png" id="11_ww4g8"]
[ext_resource type="LabelSettings" uid="uid://jdv1bfj4iff7" path="res://custom_resources/InteractionButtonLabels.tres" id="12_70k8r"]
[ext_resource type="Texture2D" uid="uid://b6rsdliq8rho8" path="res://assets/ui/interact-btn-disabled.png" id="12_smtws"]
[ext_resource type="Texture2D" uid="uid://bxpf6e0gul3kk" path="res://assets/pastry/bowl_back.png" id="13_70k8r"]
[ext_resource type="Texture2D" uid="uid://cohlbvecxf7gn" path="res://assets/pastry/bowl_front.png" id="14_q84un"]

[node name="MinigameOverlay" type="Node2D"]
script = ExtResource("1_jh425")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 700.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_e7l36")

[node name="MenuContainer" type="Control" parent="TextureRect"]
anchors_preset = 0
offset_left = 38.0
offset_top = 92.0
offset_right = 656.0
offset_bottom = 532.0
mouse_filter = 2

[node name="Recipe1" type="TextureButton" parent="TextureRect/MenuContainer"]
layout_mode = 2
offset_top = 11.0
offset_right = 281.0
offset_bottom = 205.0
texture_normal = ExtResource("3_t45b2")
texture_pressed = ExtResource("4_3ueo8")

[node name="Sprite2D" type="Sprite2D" parent="TextureRect/MenuContainer/Recipe1"]
position = Vector2(130, 97)
scale = Vector2(0.475, 0.475)
texture = ExtResource("5_e7l36")

[node name="Recipe2" type="TextureButton" parent="TextureRect/MenuContainer"]
layout_mode = 2
offset_left = 331.0
offset_top = 11.0
offset_right = 612.0
offset_bottom = 205.0
texture_normal = ExtResource("3_t45b2")
texture_pressed = ExtResource("4_3ueo8")

[node name="Sprite2D" type="Sprite2D" parent="TextureRect/MenuContainer/Recipe2"]
position = Vector2(141, 98)
scale = Vector2(0.6, 0.6)
texture = ExtResource("6_ww4g8")

[node name="Recipe3" type="TextureButton" parent="TextureRect/MenuContainer"]
layout_mode = 2
offset_top = 248.0
offset_right = 282.0
offset_bottom = 442.0
texture_normal = ExtResource("3_t45b2")
texture_pressed = ExtResource("4_3ueo8")

[node name="Sprite2D" type="Sprite2D" parent="TextureRect/MenuContainer/Recipe3"]
position = Vector2(140, 97)
scale = Vector2(0.45, 0.45)
texture = ExtResource("7_70k8r")

[node name="Recipe4" type="TextureButton" parent="TextureRect/MenuContainer"]
layout_mode = 2
offset_left = 331.0
offset_top = 248.0
offset_right = 612.0
offset_bottom = 442.0
texture_normal = ExtResource("3_t45b2")
texture_pressed = ExtResource("4_3ueo8")

[node name="Sprite2D" type="Sprite2D" parent="TextureRect/MenuContainer/Recipe4"]
position = Vector2(142, 96)
scale = Vector2(0.55, 0.55)
texture = ExtResource("8_q84un")

[node name="RecipeContainer" type="Control" parent="TextureRect"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 38.0
offset_top = 85.0
offset_right = 656.0
offset_bottom = 525.0
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="TextureRect/RecipeContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -6.0
offset_bottom = -214.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("9_smtws")
text = "Receta"

[node name="IngredientsContainer" type="HBoxContainer" parent="TextureRect/RecipeContainer"]
layout_mode = 1
offset_top = 249.0
offset_right = 612.0
offset_bottom = 349.0
theme_override_constants/separation = 20
alignment = 1

[node name="BtnContinue" type="TextureButton" parent="TextureRect/RecipeContainer"]
layout_mode = 0
offset_left = 268.0
offset_top = 380.0
offset_right = 519.0
offset_bottom = 459.0
texture_normal = ExtResource("10_e7l36")
texture_pressed = ExtResource("11_ww4g8")

[node name="Label" type="Label" parent="TextureRect/RecipeContainer/BtnContinue"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.0
offset_top = -15.0
offset_right = 78.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "Elegir receta"
label_settings = ExtResource("12_70k8r")
horizontal_alignment = 1

[node name="BtnBack" type="TextureButton" parent="TextureRect/RecipeContainer"]
layout_mode = 0
offset_top = 380.0
offset_right = 251.0
offset_bottom = 459.0
texture_normal = ExtResource("10_e7l36")
texture_pressed = ExtResource("11_ww4g8")

[node name="Label" type="Label" parent="TextureRect/RecipeContainer/BtnBack"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.0
offset_top = -15.0
offset_right = 78.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "No estoy seguro"
label_settings = ExtResource("12_70k8r")
horizontal_alignment = 1

[node name="RecollectContainer" type="Control" parent="TextureRect"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Bowl" type="Node2D" parent="TextureRect/RecollectContainer"]
visible = false
position = Vector2(342, 494)
scale = Vector2(1.8, 1.8)

[node name="Back" type="Sprite2D" parent="TextureRect/RecollectContainer/Bowl"]
visible = false
scale = Vector2(0.175, 0.175)
texture = ExtResource("13_70k8r")

[node name="IngredientArea" type="Area2D" parent="TextureRect/RecollectContainer/Bowl"]
visible = false
scale = Vector2(1e-05, 1e-05)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TextureRect/RecollectContainer/Bowl/IngredientArea"]
visible = false
polygon = PackedVector2Array(-722222, -444446, -722222, -388890, -2.44444e+06, -444446, -4.5e+06, -722224, -5.38889e+06, -888890, -6.27778e+06, -1.05556e+06, -7.05556e+06, -1.22222e+06, -8.38889e+06, -1.83334e+06, -8.05556e+06, -888890, -7.61111e+06, 55554, -7.61111e+06, 55554, -6.33333e+06, 1.66666e+06, -5.16667e+06, 2.55555e+06, -4.05556e+06, 3.27778e+06, -2.33333e+06, 3.88889e+06, -777778, 4.11111e+06, 777778, 4.22222e+06, 1.83333e+06, 3.88889e+06, 2.94444e+06, 3.61111e+06, 3.83333e+06, 3.27778e+06, 4.94444e+06, 2.66666e+06, 5.72222e+06, 2e+06, 6.61111e+06, 1.16666e+06, 7.16667e+06, 499998, 7.66667e+06, -111114, 8.11111e+06, -833336, 8.5e+06, -1.83334e+06, 7.27778e+06, -1.27778e+06, 5.27778e+06, -722224, 3.94444e+06, -611114, 2.77778e+06, -555558, 1.55556e+06, -500002, 500000, -444446, -666666, -444446)

[node name="Front" type="Sprite2D" parent="TextureRect/RecollectContainer/Bowl"]
visible = false
z_index = 2
scale = Vector2(0.175, 0.175)
texture = ExtResource("14_q84un")

[node name="BtnPrepareRecipe" type="TextureButton" parent="TextureRect"]
visible = false
z_index = 3
layout_mode = 0
offset_left = 222.0
offset_top = 520.0
offset_right = 473.0
offset_bottom = 599.0
disabled = true
texture_normal = ExtResource("10_e7l36")
texture_pressed = ExtResource("11_ww4g8")
texture_disabled = ExtResource("12_smtws")

[node name="Label" type="Label" parent="TextureRect/BtnPrepareRecipe"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.0
offset_top = -15.0
offset_right = 78.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "A preparar!"
label_settings = ExtResource("12_70k8r")
horizontal_alignment = 1

[connection signal="pressed" from="TextureRect/MenuContainer/Recipe1" to="." method="_on_recipe_1_pressed"]
[connection signal="pressed" from="TextureRect/MenuContainer/Recipe2" to="." method="_on_recipe_2_pressed"]
[connection signal="pressed" from="TextureRect/MenuContainer/Recipe3" to="." method="_on_recipe_3_pressed"]
[connection signal="pressed" from="TextureRect/MenuContainer/Recipe4" to="." method="_on_recipe_4_pressed"]
[connection signal="pressed" from="TextureRect/RecipeContainer/BtnContinue" to="." method="_on_btn_continue_pressed"]
[connection signal="pressed" from="TextureRect/RecipeContainer/BtnBack" to="." method="_on_btn_back_pressed"]
[connection signal="pressed" from="TextureRect/BtnPrepareRecipe" to="." method="_on_btn_prepare_recipe_pressed"]
